tests/test-dirs/errors/alerts/lib.ml

let sqrt x = sqrt x